# llamaindex_rag

./: .gitignore  How to.md  Howto.md  README.md  chat_server.py  create_db.py  llama-index-rag.ipynb  pyproject.toml  requirements.txt  test_API.ipynb  test_db.ipynb
chroma_db/: chroma.sqlite3
rag_docs/: Paca.md
