[project]
name = "llamaindex_rag"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Guillaume Thomas", email = "gpythomas@gmail.com"},
]
dependencies = [
    "requests>=2.32.3",
    "logging>=0.4.9.6",
    "llama-index-core>=0.11.2",
    "llama-index-vector-stores-chroma>=0.2.0",
    "llama-index-embeddings-openai>=0.2.3",
    "llama-index-llms-openrouter>=0.2.0",
    "chromadb>=0.5.5",
    "openai>=1.42.0",
    "flask>=3.0.3",
    "flask-cors>=4.0.1",
    "uuid>=1.30",
    "llama-index>=0.11.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
